<resources>
    <string name="app_name">Tenat App</string>
    <string name="food">Food</string>
    <string name="food_section">Section</string>
    <string name="desc">Desc</string>
    <string name="bedroom">Bedroom</string>
    <string name="facilities">Facilities</string>
    <string name="quality">Quantity</string>
    <string name="taste">TASTE</string>
    <string name="state">STATE</string>
    <string name="spicy">SPICY</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="inform_your_caretaker">Inform your caretaker by including from 10 time &amp; date</string>
    <string name="breakfast">BreakFast</string>
    <string name="lunch">Lunch</string>
    <string name="snacks">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="dinning">Dinning HALL</string>
    <string name="staff">STAFF</string>
    <string name="kitchen">KITCHEN</string>
    <string name="ac">AC</string>
    <string name="hall_tv">HALL TV</string>
    <string name="water">WATER</string>
    <string name="serving">Serving</string>
    <string name="food_missing">FOOD MISSING</string>
    <string name="fridge">Fridge</string>
    <string name="missing">MISSING</string>
    <string name="academic">ACADEMIC</string>
    <string name="no_cooling">No COOLING</string>
    <string name="social_behaviour">SOCIAL BEHAVIOUR</string>
    <string name="roommate">ROOMMATE</string>
    <string name="self_cooking">Self Cooking</string>
    <string name="gas_stove">GAS STOVE</string>
    <string name="kattle">KATTLE</string>
    <string name="micromave">MICROMAVE</string>
    <string name="furniture">FURNITURE</string>
    <string name="shower">SHOWER</string>
    <string name="bed">BED</string>
    <string name="washroom">WASHROOM</string>
    <string name="chair">CHAIR</string>
    <string name="table">TABLE</string>
    <string name="door">DOOR</string>
    <string name="sheet">SHEET</string>
    <string name="tap">TAP</string>
    <string name="flush">FLUSH</string>
    <string name="light">LIGHT</string>
    <string name="comfort">Comfort</string>
    <string name="fan">FAN</string>
    <string name="tv">TV</string>
    <string name="exhaust">EXHAUST</string>
    <string name="cleanliness">CLEANLINESS</string>
    <string name="pest">PEST</string>
    <string name="cleaning">CLEANING</string>
    <string name="sweeping">SWEEPING</string>
    <string name="security">Security</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pg_entry">PG ENTRY</string>
    <string name="cctv">CCTV</string>
    <string name="fire_safety">FIRE SAFETY</string>
    <string name="theft">THEFT</string>
    <string name="misbehaviour">MISBEHAVIOUR</string>
    <string name="Staff">Staff</string>
    <string name="cheating">CHEATING</string>
    <string name="inactive">INACTIVE</string>
    <string name="rent">Rent / Payment</string>
    <string name="sec_deposite">SEC DEPOSITE</string>
    <string name="bill">BILL</string>
    <string name="fine">FINE</string>
    <string name="communication">Communication</string>
    <string name="phone">PHONE</string>
    <string name="unavailability_of_owner">UNAVAILABILITY OF OWNER</string>
    <string name="lift">Lift</string>
    <string name="non_operational">NON OPERATIONAL</string>
    <string name="fan_not_working">FAN NOT WORKING</string>
    <string name="internet">INTERNET</string>
    <string name="no_internet">NO INTERNET</string>
    <string name="speed">SPEED</string>
    <string name="fire_wall">FIRE WALL</string>
    <string name="low_cooling">LOW COOLING</string>
    <string name="laundry">Laundry</string>
    <string name="washing_machine">WASHING MACHINE</string>
    <string name="water_low">WATER LOW</string>
    <string name="timing">TIMING</string>
    <string name="electricity">Electricity</string>
    <string name="power_cut">POWER CUT</string>
    <string name="meter">METER</string>
    <string name="inverter">INVERTER</string>
    <string name="noise">Noise</string>
    <string name="loud_music">LOUD MUSIC</string>
    <string name="external_noise">EXTERNAL NOISE</string>
    <string name="water_cooler">WATER COOLER</string>
    <string name="tds">TDS</string>
    <string name="water_flow">WATER FLOW</string>
    <string name="water_taste">WATER TASTE</string>
    <string name="parking">Parking</string>
    <string name="space">SPACE</string>
    <string name="harm_to_vehicles">HARM TO VEHICLES</string>
    <string name="gym">Gym</string>
    <string name="equipments">EQUIPMENTS</string>
    <string name="record">Record</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="host_a_friend">Host a friend</string>
    <string name="done">Done</string>
    <string name="mark_closed">Mark closed</string>
    <string name="please_clean_my_room_room_103">Please clean my room, room 103</string>
    <string name="complaint_raised">Complaint raised</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="resolved">Resolved</string>
    <string name="_4th_july_11_27_am">4th July 11:27 AM</string>
    <string name="add_complaints">Add Complaints</string>
    <string name="complaints">Complaints</string>
    <string name="add_a_complaint">Add a Complaint</string>
    <string name="add_your_complaint_and_get_resolved_in_minutes">Add your complaint and get resolved in minutes.</string>
    <string name="my_complaint">My Complaint</string>
    <string name="profile_is_incomplete">Profile is incomplete.</string>
    <string name="complete_your_profile">Complete your profile</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="address">India, Bangalore, HSR Layout, Pin-5201374, sector - 2, Street no - 45</string>
    <string name="report_issue"><![CDATA[Report & get \nsolved your \nproblem easily.]]></string>
</resources>