<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bedroom_card_view"
        style="@style/material_card_view"
        android:layout_height="90dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"
        app:cardBackgroundColor="@color/light_shade_gray_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/constraint_layout">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_quality"
                style="@style/food_section_heading_txt_view"
                android:text="@string/furniture"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                style="@style/linear_layout"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_quality"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_bed"
                    style="@style/food_section_txt_view"
                    android:text="@string/bed"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/shape"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_chair"
                    style="@style/food_section_txt_view"
                    android:layout_weight="2"
                    android:text="@string/chair"
                    android:background="@drawable/shape"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_table"
                    style="@style/food_section_txt_view"
                    android:text="@string/table"
                    android:background="@drawable/shape"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_door"
                    style="@style/food_section_txt_view"
                    android:text="@string/door"
                    android:background="@drawable/shape"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_sheet"
                    style="@style/food_section_txt_view"
                    android:text="@string/sheet"
                    android:background="@drawable/shape"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>